Изменен формат получения файла
