# file-storager/docs/swagger.yaml
@@ -35,6 +35,13 @@ definitions:
       status:
         type: string
     type: object
+  handlers.SaveFileRequest:
+    properties:
+      id:
+        type: integer
+      text:
+        type: string
+    type: object
 host: localhost:8082
 info:
   contact: {}
@@ -72,30 +79,12 @@ paths:
       - application/json
       description: Save analysis result to DB.
       parameters:
-      - in: formData
-        name: average_length_of_words
-        type: number
-      - in: formData
-        name: average_sentences_per_paragraph
-        type: number
-      - in: formData
-        name: average_words_per_sentence
-        type: number
-      - in: formData
-        name: id
-        type: integer
-      - in: formData
-        name: paragraphs_amount
-        type: integer
-      - in: formData
-        name: sentences_amount
-        type: integer
-      - in: formData
-        name: symbols_amount
-        type: integer
-      - in: formData
-        name: words_amount
-        type: integer
+      - description: Result of file analysis
+        in: body
+        name: analysis
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.Analysis'
       produces:
       - application/json
       responses:
@@ -162,15 +151,11 @@ paths:
       description: Upload file to DB.
       parameters:
       - description: File to upload
-        in: formData
+        in: body
         name: file
         required: true
-        type: file
-      - description: File ID
-        in: formData
-        name: id
-        required: true
-        type: integer
+        schema:
+          $ref: '#/definitions/handlers.SaveFileRequest'
       produces:
       - application/json
       responses:
