# file-storager/handlers/requests.go
@@ -1,0 +1,6 @@
+package handlers
+
+type SaveFileRequest struct {
+	Id   int    `json:"id"`
+	Text string `json:"text"`
+}
